@@ -31,18 +31,8 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 	static {
 //		TESTS_NUMBERS = new int [] { 40 };
 //		TESTS_RANGE = new int[] { 1, -1 };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_001" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_002" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_003" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_004" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_005" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_006" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_007" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_008" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_009" };
-//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_010" };
-//		TESTS_NAMES = new String[] { "test48" };
-//		TESTS_NAMES = new String[] { "test42" };
+
+//		TESTS_NAMES = new String[] { "testRecordPatternTypeInference_011" };
 	}
 	private String extraLibPath;
 	public static Class<?> testClass() {
@@ -97,7 +87,7 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 	}
 	@Override
 	protected void runConformTest(String[] testFiles, String expectedOutput, Map<String, String> customOptions) {
-		if(!isJRE19Plus)
+		if(!isJRE20Plus)
 			return;
 		runConformTest(testFiles, expectedOutput, customOptions, new String[] {"--enable-preview"}, JAVAC_OPTIONS);
 	}
@@ -1757,12 +1747,10 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 				"   };\n" +
 				"   System.out.println(res);\n" +
 				" }\n" +
-				"\n" +
 				" public static void main(String[] args) {\n" +
 				"   foo(new Rectangle(10, 20));\n" +
 				" }\n" +
 				"}\n" +
-				"\n" +
 				"record Rectangle(int x, int y) {\n" +
 				"}"
 				},
@@ -1778,10 +1766,8 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"X.java",
 			"import java.util.ArrayList;\n" +
 			"import java.util.List;\n" +
-			"\n" +
 			"@SuppressWarnings(\"preview\")\n" +
 			"public class X {\n" +
-			" \n" +
 			" public static void foo(List<R> rList) {\n" +
 			"   for (R(Integer a) : rList) { \n" +
 			"     System.out.println(a);  \n" +
@@ -1804,7 +1790,6 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"X.java",
 			"@SuppressWarnings(\"preview\")\n" +
 			"public class X {\n" +
-			" \n" +
 			"    public static boolean foo() {\n" +
 			"        boolean ret = false;\n" +
 			"        R[] recArray = {new R(0)};\n" +
@@ -1813,7 +1798,6 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"        }\n" +
 			"        return ret;\n" +
 			"    }\n" +
-			"       \n" +
 			"    public static void main(String[] args) {\n" +
 			"   System.out.println(foo());\n" +
 			" }\n" +
@@ -1826,11 +1810,9 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 		runNegativeTest(new String[] {
 			"X.java",
 			"import java.util.function.UnaryOperator;\n" +
-			"\n" +
 			"record Mapper<T>(T in, T out) implements UnaryOperator<T> {\n" +
 			"    public T apply(T arg) { return in.equals(arg) ? out : null; }\n" +
 			"}\n" +
-			"\n" +
 			"@SuppressWarnings(\"preview\")\n" +
 			"public class X {\n" +
 			" void test(UnaryOperator<? extends CharSequence> op) {\n" +
@@ -1842,12 +1824,12 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"}"
 			},
 			"----------\n" +
-			"1. ERROR in X.java (at line 14)\n" +
+			"1. ERROR in X.java (at line 12)\n" +
 			"	Zork();\n" +
 			"	^^^^^^\n" +
 			"Return type for the method is missing\n" +
 			"----------\n" +
-			"2. ERROR in X.java (at line 14)\n" +
+			"2. ERROR in X.java (at line 12)\n" +
 			"	Zork();\n" +
 			"	^^^^^^\n" +
 			"This method requires a body instead of a semicolon\n" +
@@ -1857,11 +1839,9 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 		runConformTest(new String[] {
 			"X.java",
 			"import java.util.function.UnaryOperator;\n" +
-			"\n" +
 			"record Mapper<T>(T in) implements UnaryOperator<T> {\n" +
 			"    public T apply(T arg) { return in.equals(arg) ? in : null; }\n" +
 			"}\n" +
-			"\n" +
 			"public class X {\n" +
 			" @SuppressWarnings(\"preview\")\n" +
 			" public static boolean test(UnaryOperator<? extends CharSequence> op) {\n" +
@@ -1903,19 +1883,15 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"X.java",
 			"import java.util.ArrayList;\n" +
 			"import java.util.List;\n" +
-			"\n" +
 			"interface I {int a();}\n" +
 			"record RecB(int a) implements I {}\n" +
 			"record R<T>(T a) {}\n" +
-			"\n" +
 			"public class X {\n" +
-			"\n" +
 			"    private static boolean test(List<R<? extends I>> list) {\n" +
 			"        if (list.get(0) instanceof R(var a))\n" +
 			"         return a.a() > 0;\n" +
 			"        return false;\n" +
 			"    }  \n" +
-			"\n" +
 			"    public static void main(String... args) {\n" +
 			"        List<R<? extends I>> list = new ArrayList<>();\n" +
 			"        list.add(new R<>(new RecB(2)));\n" +
@@ -1931,9 +1907,7 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"interface I {int a();}\n" +
 			"record RecB(int a) implements I {}\n" +
 			"record R<T>(T a) {}\n" +
-			"\n" +
 			"public class X {\n" +
-			"\n" +
 			"    private static boolean test(R<? extends I> op) {\n" +
 			"        if (op instanceof R(var a)) {\n" +
 			"         return a.a() > 0;\n" +
@@ -1952,14 +1926,12 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 		runConformTest(new String[] {
 			"X.java",
 			"public class X {\n" +
-			" \n" +
 			"     public static <P> boolean test(P p) {\n" +
 			"         if (p instanceof R(var a)) {\n" +
 			"              return a.len() > 0;\n" +
 			"         }\n" +
 			"         return false;\n" +
 			"     }\n" +
-			" \n" +
 			"     public static void main(String argv[]) {\n" +
 			"         System.out.println(test(new R<>(new Y())));\n" +
 			"     }\n" +
@@ -1977,17 +1949,14 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 			"interface I {\n" +
 			"   int a();\n" +
 			"}\n" +
-			"\n" +
 			"record R<T>(T a) {}\n" +
 			"public class X {\n" +
-			"\n" +
 			"    public static boolean test(R<?> p) {\n" +
 			"        if (p instanceof R(var a)) {\n" +
 			"             return a instanceof I;\n" +
 			"        }\n" +
 			"        return false; \n" +
 			"    }\n" +
-			"\n" +
 			"    public static void main(String argv[]) {\n" +
 			"       System.out.println(test(new R<>((I) () -> 0)));\n" +
 			"    }\n" +
@@ -1999,18 +1968,14 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 		runConformTest(new String[] {
 			"X.java",
 			"interface I {int a();}\n" +
-			"\n" +
 			"record R<T>(T a) {}\n" +
-			"\n" +
 			"public class X {\n" +
-			"\n" +
 			"    public static boolean test(R<I> p) {\n" +
 			"        return switch (p) {\n" +
 			"            case R(var a) -> a instanceof I;\n" +
 			"            default ->  false;\n" +
 			"        };\n" +
 			"    }\n" +
-			"\n" +
 			"    public static void main(String argv[]) {\n" +
 			"       System.out.println(test(new R<>((I) () -> 0)));\n" +
 			"    }\n" +
@@ -2025,18 +1990,14 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 				"interface I {\n" +
 				"   int a();\n" +
 				"}\n" +
-				"\n" +
 				"record R<T>(T a) {}\n" +
-				"\n" +
 				"public class X {\n" +
-				"\n" +
 				"    private static boolean test(R<? extends I> p) {\n" +
 				"        if (p instanceof R(String a)) {\n" +
 				"             return a instanceof String;\n" +
 				"        }\n" +
 				"        return true;\n" +
 				"    }\n" +
-				"\n" +
 				"    public static void main(String argv[]) {\n" +
 				"        System.out.println(test(new R<>((I) () -> 0))); \n" +
 				"    }\n" +
@@ -2060,13 +2021,61 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 				"interface I {\n" +
 				"   int a();\n" +
 				"}\n" +
+				"record R<T>(T a) {}\n" +
+				"public class X {\n" +
+				"    private static boolean test(R<?> p) {\n" +
+				"        if (p instanceof R(String a)) {\n" +
+				"             return a instanceof String;\n" +
+				"        }\n" +
+				"        return true;\n" +
+				"    }\n" +
+				"    public static void main(String argv[]) {\n" +
+				"        System.out.println(test(new R<>((I) () -> 0))); \n" +
+				"    }\n" +
+				"}"
+				},
+				"true");
+	}
+	public void testIssue882() {
+		Map<String, String> options = getCompilerOptions(false);
+		runNegativeTest(new String[] {
+				"X.java",
+				"import java.util.ArrayList;\n"
+				+ "import java.util.List;\n"
+				+ "@SuppressWarnings(\"preview\")\n"
+				+ "public class X {\n"
+				+ "	public static void foo(List<R> rList) {\n"
+				+ "		for(R(Integer abcs):rList) {\n"
+				+ "			System.out.println(abcs);\n"
+				+ "		}\n"
+				+ "	}\n"
+				+ "	record R(int i) {}\n"
+				+ "}"
+				},
+				"----------\n" +
+				"1. ERROR in X.java (at line 6)\n" +
+				"	for(R(Integer abcs):rList) {\n" +
+				"	    ^^^^^^^^^^^^^^^\n" +
+				"Record Pattern is a preview feature and disabled by default. Use --enable-preview to enable\n" +
+				"----------\n",
+				"",
+				null,
+				false,
+				options);
+		}
+	public void testRecordPatternTypeInference_011() {
+		runNegativeTest(new String[] {
+				"X.java",
+				"interface I {\n" +
+				"   int a();\n" +
+				"}\n" +
 				"\n" +
 				"record R<T>(T a) {}\n" +
 				"\n" +
 				"public class X {\n" +
 				"\n" +
-				"    private static boolean test(R<?> p) {\n" +
-				"        if (p instanceof R(String a)) {\n" +
+				"    private static boolean test(R<? extends I> p) {\n" +
+				"        if (p instanceof R<>(String a)) {\n" +
 				"             return a instanceof String;\n" +
 				"        }\n" +
 				"        return true;\n" +
@@ -2077,6 +2086,16 @@ public class RecordPatternTest extends AbstractRegressionTest9 {
 				"    }\n" +
 				"}"
 				},
-				"true");
+				"----------\n" +
+				"1. ERROR in X.java (at line 10)\n" +
+				"	if (p instanceof R<>(String a)) {\n" +
+				"	    ^^^^^^^^^^^^^^^^^^^^^^^^^^\n" +
+				"Incompatible conditional operand types R<capture#1-of ? extends I> and R\n" +
+				"----------\n" +
+				"2. WARNING in X.java (at line 10)\n" +
+				"	if (p instanceof R<>(String a)) {\n" +
+				"	                 ^^^^^^^^^^^^^\n" +
+				"You are using a preview language feature that may or may not be supported in a future release\n" +
+				"----------\n");
 	}
 }
